--- a/templates/main.css
+++ b/templates/main.css
@@ -182,7 +182,7 @@ a {
 }
 
 /* Special Stuff For Small Screens */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
 
     .paper {
         display: list-item;
@@ -226,91 +226,63 @@ a {
     a:after {
         content: attr(alt);
     }
+
+    .slider { 
+        opacity: 0;
+        width: 0;
+        height: 0;
+    }
 }
 
-/* Set colours for light and dark mode */
-
-@media (prefers-color-scheme: light) {
-    header {
-        background-color: accent-color-placeholder;
-    }
-
-    #scroller {
-        background-color: link-hover-color-placeholder;
-    }
-
-    body {
-        background-color: background-color-placeholder;
-        color: font-color-placeholder;
-    }
-
-    .paper-icon-dark {
-        display: None;
-    }
-
-    h1,
-    h2,
-    h3 {
-        color: header-color-placeholder;
-    }
-
-    a {
-        color: accent-color-placeholder;
-    }
-    
-    a:hover {
-        color: link-hover-color-placeholder;
-    }
-    
-    .hbar {
-        color: divider-color-placeholder;
-    }
-
-    h3 {
-        border-bottom: 1px divider-color-placeholder dashed;
-    }
-    
+/* Mode switch */
+input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
 }
 
-/* Dark mode */
-@media (prefers-color-scheme: dark) {
-    header {
-        background-color: accent-color-dark-placeholder;
-    }
+.slider {
+    position: absolute;
+    top: 0.6em;
+    left: 4px;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+    width: 30px;
+    height: 15px;
+}
 
-    #scroller {
-        background-color: link-hover-color-dark-placeholder;
-    }
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 10px;
+    width: 10px;
+    left: 4px;
+    bottom: 3px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
 
-    body {
-        background-color: background-color-dark-placeholder;
-        color: font-color-dark-placeholder;
-    }
+input:checked + .slider {
+    background-color: accent-color-dark-placeholder;
+}
 
-    h1,
-    h2,
-    h3 {
-        color: header-color-dark-placeholder;
-    }
+input:focus + .slider {
+    box-shadow: 0 0 1px accent-color-dark-placeholder;
+}
 
-    a {
-        color: accent-color-dark-placeholder;
-    }
-    
-    a:hover {
-        color: link-hover-color-dark-placeholder;
-    }
-    
-    .hbar {
-        color: divider-color-dark-placeholder;
-        border-bottom-width: 1px;
-    }
+input:checked + .slider:before {
+    -webkit-transform: translateX(12px);
+    -ms-transform: translateX(12px);
+    transform: translateX(12px);
+}
 
-    h3 {
-        border-bottom: 1px divider-color-dark-placeholder dashed;
-    }
+/* Rounded sliders */
+.slider.round {
+    border-radius: 15px;
+}
 
-    .paper-icon {
-        display: None;
-    }
+.slider.round:before {
+    border-radius: 50%;
 }
